--- a/components/styles.css
+++ b/components/styles.css
@@ -143,10 +143,13 @@ ul.nav {
 	position: relative;
 	font-size: 1.9vmax;
 }
+.justif {
+	text-rendering: auto;
+}
 
 .index {
 	/*	border-radius: 25%;*/
-	width: 55vh;
+	width: 55%;
 	/*	height: 40%;*/
 }
 
@@ -179,8 +182,7 @@ ul.nav {
 }
 
 .textos {
-	margin: 3vmax auto auto auto;
-	font-size: 1.4vmax;
+	/* margin: 3vmax auto auto auto; */
 	text-indent: 80px;
 	background-color: white;
 	max-width: 85%;
