--- a/components/styles.css
+++ b/components/styles.css
@@ -146,10 +146,22 @@ ul.nav {
 .justif {
 	text-rendering: auto;
 }
+.whats {
+	color: green;
+	float: right;
+	font-size: 50px;
+	position: fixed;
+    top: 90%;
+    /*	right: 0%;*/
+    left: 90%;
+    min-width: 160px;
+    z-index: 4;
 
+}
 .index {
 	/*	border-radius: 25%;*/
 	max-height: 50vh;
+	;
 }
 
 .media-object {
