--- a/components/styles.css
+++ b/components/styles.css
@@ -203,7 +203,7 @@ ul.nav {
 }
 
 .textos {
-	/* margin: 3vmax auto auto aut	o; */
+	margin: 3vmax auto auto auto;
 	text-indent: 80px;
 	background-color: white;
 	max-width: 85%;
