--- a/components/styles.css
+++ b/components/styles.css
@@ -120,10 +120,17 @@ body {
 	float: none;
 	position: relative;
 	max-width: 89%;
+	color: gray;
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: bolder;
+	font-size: 1.5vmax;
+	text-decoration: none;
+
 }
 
-.nav a {
-	margin-top: -1vmax;
+.navbar a:hover{
+	text-decoration: none;
+	color: rgb(168, 83, 157);
 
 }
 
@@ -151,7 +158,7 @@ ul.nav {
 	position: fixed;
 	height: 10vh;
 	min-height: 80px;
-    bottom: 5%;
+    top: 12%;
 	right: 3%;
     z-index: 4;
 	background-color: transparent;
